# port-sharer

./: CMakeLists.txt  Makefile  README.md  example.json
files/: httpPortReuse.init  httpportreuse.config
luci/: Makefile
luci/po/zh-cn/: port-sharer.po
luci/root/usr/lib/lua/luci/controller/: port_sharer.lua
luci/root/usr/lib/lua/luci/model/cbi/port_sharer/: instances.lua
luci/root/usr/share/luci/menu.d/: luci-app-port-sharer.json
luci/root/usr/share/rpcd/acl.d/: luci-app-port-sharer.json
src/: access_control.cpp  access_control.hpp  config.cpp  config.hpp  detector.cpp  detector.hpp  kernel_bypass.cpp  kernel_bypass.hpp  main.cpp  metrics.cpp  metrics.hpp  proxy_protocol.cpp  proxy_protocol.hpp  router.cpp  router.hpp  server.cpp  server.hpp  session.cpp  session.hpp
tests/: stress_common.hpp  test_access_control.cpp  test_common.hpp  test_config.cpp  test_detectors_router.cpp  test_metrics.cpp  test_proxy_protocol.cpp  test_realpayload.cpp  test_realpayload_con.cpp  test_session.cpp  test_stress_basic.cpp  test_stress_extreme.cpp
